fix(style): prevent page sidebar being hidden by fullscreen graph

--- a/packages/starlight-site-graph/styles/common.css
+++ b/packages/starlight-site-graph/styles/common.css
@@ -156,15 +156,15 @@
 
 body:has(.background-blur) {
 	#starlight__sidebar {
-		z-index: -1;
+		z-index: 0;
 	}
 
 	.header {
-		z-index: -1;
+		z-index: 0;
 	}
 
 	.right-sidebar:not(:has(.is-fullscreen)) {
-		z-index: -1;
+		z-index: 0;
 	}
 }
 
